# jiminy-research

./: .gitignore  README.md  build.cabal  index.html  package.json  params.json
analysis/: BatteryUsage.hs  Tracks.hs
data/: Phones.json
data/tracks/: 2014-7-08.geojson  2014-7-09.geojson  2014-7-10.geojson  2014-7-11.geojson  2014-7-12.geojson  2014-7-13.geojson  2014-7-14.geojson  2014-7-15.geojson  2014-7-16.geojson  2014-7-17.geojson  2014-7-18.geojson  2014-7-19.geojson  2014-7-20.geojson  2014-7-21.geojson  2014-7-22.geojson  2014-7-23.geojson  2014-7-24.geojson  2014-7-25.geojson  2014-7-26.geojson  2014-7-27.geojson  2014-7-28.geojson  2014-7-29.geojson  2014-7-30.geojson  2014-7-31.geojson  2014-8-02.geojson
javascripts/: main.js
src/: Amount.hs  BatteryUsage.hs  DischargeModel.hs  Phone.hs  Tracks.hs
