name:               jiminy-research
version:            0.0.1
description:        Researching the effect of GPS queries on smartphone battery life.
license:            MIT
author:             Justin Manley
maintainer:         manleyjster@gmail.com
build-type:         Simple
cabal-version:      >= 1.18

executable tracks
    main-is:        Tracks.hs
    hs-source-dirs: src
    build-depends:
        aeson,
        bytestring,
        base == 4.*,
        transformers,
        text,
        statistics,
        vector
    default-language: Haskell2010

source-repository head
    type: git
    location: https://github.com/manleyjster/jiminy-research